# whenisbad

./: .buildpacks  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.json  package.json  stack.yaml  whenisbad.cabal
app/: Main.hs
client/: GenerateElm.hs  Main.elm  elm-package.json
src/: Api.hs  Lib.hs
