name:                whenisbad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aaronshim/whenisbad
license:             MIT
license-file:        LICENSE
author:              Haohang Xu and Aaron Shim
maintainer:          aaron@shim.space
copyright:           2017 Haohang Xu and Aaron Shim
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server >= 0.10
                     , wai
                     , warp
  default-language:    Haskell2010

executable whenisbad-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , whenisbad
  default-language:    Haskell2010

test-suite whenisbad-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , whenisbad
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aaronshim/whenisbad
